--- a/index.html
+++ b/index.html
@@ -416,6 +416,11 @@ summary {
 </div>
 
 
+<p>This report was down as part of the Practical Machine Learning class by the John Hopkins University on coursera.org. It is meant to demonstrate some basic data cleaning tasks and the subsequent training of different predictions models.</p>
+<p>The data was provided by this website <a href="http://groupware.les.inf.puc-rio.br/har" class="uri">http://groupware.les.inf.puc-rio.br/har</a> and can be downloaded via the following links.</p>
+<p>training: <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv" class="uri">https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv</a> testing: <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv" class="uri">https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv</a></p>
+<p>The data consists of measurements from different smart devices which were worn by participants while doing dumbbell exercises specifically instructed ways. The goal of this analysis is to predict the used specification (the classe variable) with the data provided by the smart devices.</p>
+<p>From the used models the one using the random forest method performed best and was therefore used to predict the classe variable on the testing set.</p>
 <pre class="r"><code>training = read.csv(file = &quot;../pml-training.csv&quot;)
 testing = read.csv(file = &quot;../pml-testing.csv&quot;)</code></pre>
 <pre class="r"><code>library(caret)</code></pre>
@@ -487,21 +492,193 @@ testing = testing[,-(1:6)]</code></pre>
 <pre class="r"><code>inBuild = createDataPartition(training$classe, p = 0.75, list = FALSE)
 validation = training[-inBuild,]
 training = training[inBuild,]</code></pre>
-<pre class="r"><code>#rpartFit = train(classe ~ ., data = training, method = &quot;rpart&quot; )
-#fitControl = trainControl(method = &quot;repeatedcv&quot;, number = 10, repeats = 10)
-#nbFit = train(classe ~ ., data = training, method = &quot;nb&quot;)
-#rfFit = train(classe ~ ., data = training, method = &quot;rf&quot;)
-#rfControlFit = train(classe ~ ., data = training, method = &quot;rf&quot;, trControl = #fitControl)
+<p>The next step is training models with the data by using different algorithms. In this particular case we use a tree based prediction (rpart), linear discriminant analysis (lda), boosting with trees (gbm) and random forests (rf). The rf-training will be repeated with a trainControl-object included.</p>
+<pre class="r"><code>#Train different models
+rpartFit = train(classe ~ ., data = training, method = &quot;rpart&quot;)
+ldaFit = train(classe ~ ., data = training, method = &quot;lda&quot;)
+gbmFit = train(classe ~ ., data = training, method = &quot;gbm&quot;)
+rfFit = train(classe ~ ., data = training, method = &quot;rf&quot;)
 
-print(4+5)</code></pre>
-<pre><code>## [1] 9</code></pre>
-<pre class="r"><code>#rpartPred = predict(rpartFit, newdata = validation)</code></pre>
-<pre class="r"><code>#confusionMatrix(testing$classe, rpartPred)</code></pre>
-<pre class="r"><code>#confusionMatrix(testing$classe, ldaPred)</code></pre>
-<pre class="r"><code>#confusionMatrix(testing$classe, nbPred)</code></pre>
-<pre class="r"><code>#confusionMatrix(testing$classe, gbmPred)</code></pre>
-<pre class="r"><code>#confusionMatrix(testing$classe, rfPred)</code></pre>
-<pre class="r"><code>#confusionMatrix(testing$classe, rfPredControl)</code></pre>
+#Create a control object for training
+fitControl = trainControl(method = &quot;repeatedcv&quot;, number = 10, repeats = 10)
+#Train another rf-model with the control object as parameter
+rfControlFit = train(classe ~ ., data = training, method = &quot;rf&quot;, trControl = fitControl)</code></pre>
+<p>We use each of the calculated models to predict the classe outcomes of the validation set.</p>
+<pre class="r"><code>rpartPred = predict(rpartFit, newdata = validation)
+ldaFit = predict(ldaFit, newdata = validation)
+gbmPred = predict(gbmFit, newdata = validation)
+rfPred = predict(rfFit, newdata = validation)
+rfControlPred = predict(rfControlFit, newdata = validation)</code></pre>
+<p>The following part shows the confusion matrix for each prediction, ordered by increasing Accuracy. The rpart and the lda method did not yield sufficiently accurate results with only ~50% and ~70% Accuracy, respectively. However, gbm and rf provided reliable results with over 97% Accuracy. Re-training the rf model with cross validation did improve Accuracy but only by the neglible amount of 0.04%.</p>
+<pre class="r"><code>confusionMatrix(validation$classe, rpartPred)</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1261   18  101    0   15
+##          B  371  353  225    0    0
+##          C  419   25  411    0    0
+##          D  353  151  300    0    0
+##          E  122  117  252    0  410
+## 
+## Overall Statistics
+##                                           
+##                Accuracy : 0.4965          
+##                  95% CI : (0.4824, 0.5106)
+##     No Information Rate : 0.5151          
+##     P-Value [Acc &gt; NIR] : 0.9955          
+##                                           
+##                   Kappa : 0.3423          
+##                                           
+##  Mcnemar&#39;s Test P-Value : NA              
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity            0.4992  0.53163  0.31885       NA  0.96471
+## Specificity            0.9437  0.85943  0.87718   0.8361  0.89038
+## Pos Pred Value         0.9039  0.37197  0.48070       NA  0.45505
+## Neg Pred Value         0.6395  0.92137  0.78316       NA  0.99625
+## Prevalence             0.5151  0.13540  0.26285   0.0000  0.08666
+## Detection Rate         0.2571  0.07198  0.08381   0.0000  0.08361
+## Detection Prevalence   0.2845  0.19352  0.17435   0.1639  0.18373
+## Balanced Accuracy      0.7214  0.69553  0.59802       NA  0.92754</code></pre>
+<pre class="r"><code>confusionMatrix(validation$classe, ldaPred)</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1140   21  122  107    5
+##          B  146  612  106   35   50
+##          C   88   89  554  103   21
+##          D   57   38   87  593   29
+##          E   34  167   70   74  556
+## 
+## Overall Statistics
+##                                           
+##                Accuracy : 0.7045          
+##                  95% CI : (0.6915, 0.7173)
+##     No Information Rate : 0.2987          
+##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16       
+##                                           
+##                   Kappa : 0.6259          
+##                                           
+##  Mcnemar&#39;s Test P-Value : &lt; 2.2e-16       
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity            0.7782   0.6602   0.5900   0.6502   0.8411
+## Specificity            0.9259   0.9153   0.9241   0.9471   0.9187
+## Pos Pred Value         0.8172   0.6449   0.6480   0.7376   0.6171
+## Neg Pred Value         0.9074   0.9204   0.9049   0.9222   0.9738
+## Prevalence             0.2987   0.1890   0.1915   0.1860   0.1348
+## Detection Rate         0.2325   0.1248   0.1130   0.1209   0.1134
+## Detection Prevalence   0.2845   0.1935   0.1743   0.1639   0.1837
+## Balanced Accuracy      0.8520   0.7877   0.7570   0.7987   0.8799</code></pre>
+<pre class="r"><code>confusionMatrix(validation$classe, gbmPred)</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1376   16    1    2    0
+##          B   22  912   15    0    0
+##          C    0   17  832    6    0
+##          D    1    2   29  770    2
+##          E    2    5    6    3  885
+## 
+## Overall Statistics
+##                                          
+##                Accuracy : 0.9737         
+##                  95% CI : (0.9688, 0.978)
+##     No Information Rate : 0.2857         
+##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16      
+##                                          
+##                   Kappa : 0.9667         
+##                                          
+##  Mcnemar&#39;s Test P-Value : 0.0003035      
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity            0.9822   0.9580   0.9422   0.9859   0.9977
+## Specificity            0.9946   0.9906   0.9943   0.9918   0.9960
+## Pos Pred Value         0.9864   0.9610   0.9731   0.9577   0.9822
+## Neg Pred Value         0.9929   0.9899   0.9874   0.9973   0.9995
+## Prevalence             0.2857   0.1941   0.1801   0.1593   0.1809
+## Detection Rate         0.2806   0.1860   0.1697   0.1570   0.1805
+## Detection Prevalence   0.2845   0.1935   0.1743   0.1639   0.1837
+## Balanced Accuracy      0.9884   0.9743   0.9683   0.9888   0.9969</code></pre>
+<pre class="r"><code>confusionMatrix(validation$classe, rfPred)</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1394    1    0    0    0
+##          B    1  947    1    0    0
+##          C    0    1  852    2    0
+##          D    0    0    3  801    0
+##          E    0    0    1    0  900
+## 
+## Overall Statistics
+##                                          
+##                Accuracy : 0.998          
+##                  95% CI : (0.9963, 0.999)
+##     No Information Rate : 0.2845         
+##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16      
+##                                          
+##                   Kappa : 0.9974         
+##                                          
+##  Mcnemar&#39;s Test P-Value : NA             
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity            0.9993   0.9979   0.9942   0.9975   1.0000
+## Specificity            0.9997   0.9995   0.9993   0.9993   0.9998
+## Pos Pred Value         0.9993   0.9979   0.9965   0.9963   0.9989
+## Neg Pred Value         0.9997   0.9995   0.9988   0.9995   1.0000
+## Prevalence             0.2845   0.1935   0.1748   0.1637   0.1835
+## Detection Rate         0.2843   0.1931   0.1737   0.1633   0.1835
+## Detection Prevalence   0.2845   0.1935   0.1743   0.1639   0.1837
+## Balanced Accuracy      0.9995   0.9987   0.9967   0.9984   0.9999</code></pre>
+<pre class="r"><code>confusionMatrix(validation$classe, rfControlPred)</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1394    1    0    0    0
+##          B    2  946    1    0    0
+##          C    0    1  854    0    0
+##          D    0    0    3  801    0
+##          E    0    0    0    0  901
+## 
+## Overall Statistics
+##                                           
+##                Accuracy : 0.9984          
+##                  95% CI : (0.9968, 0.9993)
+##     No Information Rate : 0.2847          
+##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16       
+##                                           
+##                   Kappa : 0.9979          
+##                                           
+##  Mcnemar&#39;s Test P-Value : NA              
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity            0.9986   0.9979   0.9953   1.0000   1.0000
+## Specificity            0.9997   0.9992   0.9998   0.9993   1.0000
+## Pos Pred Value         0.9993   0.9968   0.9988   0.9963   1.0000
+## Neg Pred Value         0.9994   0.9995   0.9990   1.0000   1.0000
+## Prevalence             0.2847   0.1933   0.1750   0.1633   0.1837
+## Detection Rate         0.2843   0.1929   0.1741   0.1633   0.1837
+## Detection Prevalence   0.2845   0.1935   0.1743   0.1639   0.1837
+## Balanced Accuracy      0.9991   0.9986   0.9975   0.9996   1.0000</code></pre>
+<p>Since the rf model with included cross validation performed best on the validation it will be used the predict the classe variable of the testing set.</p>
+<pre class="r"><code>predict(rfControlFit, newdata = testing)</code></pre>
+<pre><code>##  [1] B A B A A E D B A A B C B A E E A B B B
+## Levels: A B C D E</code></pre>
 
 
 
